# rwa-steering

./: .editorconfig  .env.example  .gitattributes  .gitignore  .pre-commit-config.yaml  README.md  docs_codex_README.md  pyproject.toml  rwa_agent_service_executive_plan.md  rwa_missing_inputs_generation_executive_plan.md  rwa_steering_poc_executive_plan.md
.github/workflows/: ci.yml
docs/: README.md
docs/architecture/: architecture.mermaid  routing.mermaid  rwa_multi_agent_implementation_notes.md
docs/regulatory/: basel_iii_final_reforms_executive_plan_and_technical_specification.md
mermaid/: architecture.mermaid  routing.mermaid
rwa_1.0_bob/: README.md  generate_preprod_rwa_dataset.py  nccr_mapping.csv  preprod_country_info.csv  requirements.txt  rwa_calculation_results.json  rwa_pydantic_schemas.py  test_rwa_calculator.py
rwa_1.0_bob/basel3_final_reforms/: __init__.py  api.py  calculator.py  cli.py  engine.py  models.py  reference_data.py
rwa_1.0_codex/: README.md  preprod_core_info_1000.csv  requirements.txt  rwa_backend.py  rwa_output.json
rwa_1.0_codex/reference_data/: README.md  manifest.json
rwa_1.0_codex/reference_data/bcbs/: basel_iii_final_reforms_2017.json
rwa_1.0_codex/rwa_calculator/: api_schemas.py  calculator.py  fastapi_app.py  models.py  normal_distribution.py  pandera_validation.py  reference.py  server.py
rwa_1.0_codex/tests/: test_fastapi_microservice.py  test_rwa_backend.py
src/rwa_agent_service/: __init__.py  cli.py  config.py  discussion.py  discussion_schemas.py  fastapi_app.py  graph.py  guardrails.py  langfuse_integration.py  llm.py  memory.py  nodes.py  prompts.py  quantitative_tools.py  rag.py  schemas.py  service.py  tools.py  tracing.py
src/rwa_bob/: __init__.py  generate_preprod_rwa_dataset.py  paths.py
src/rwa_bob/basel3_final_reforms/: __init__.py  api.py  calculator.py  cli.py  engine.py  models.py  reference_data.py
src/rwa_calculator/: __init__.py  generate_preprod_rwa_dataset.py  paths.py  preprod_core_info_1000.csv  preprod_dataset_summary.json  rwa_backend.py  rwa_pydantic_schemas.py
src/rwa_calculator/reference_data/: README.md  manifest.json
src/rwa_calculator/rwa_calculator/: api_schemas.py  calculator.py  capital.py  capital_models.py  fastapi_app.py  models.py  normal_distribution.py  pandera_validation.py  reference.py  server.py
src/rwa_codex/: generate_preprod_rwa_dataset.py  rwa_backend.py
src/rwa_codex/rwa_calculator/: __init__.py  api_schemas.py  calculator.py  fastapi_app.py  reference.py
src/rwa_dashboard/: __init__.py  cli.py  data.py  streamlit_app.py
src/rwa_forecast_service/: __init__.py  cli.py  engine.py  fastapi_app.py  schemas.py
src/rwa_projection_service/: __init__.py  calendar.py  cli.py  engine.py  fastapi_app.py  schemas.py
src/rwa_rats_service/: __init__.py  cli.py  engine.py  fastapi_app.py  schemas.py
src/rwa_steering/: __init__.py  cli.py  engine.py  errors.py  fastapi_app.py  input_package.py  missing_inputs.py  scenarios.py  schemas.py  transformations.py
src/rwa_steering/generated_inputs/: README.md  capital_positions.csv  cva_hedges.csv  cva_netting_sets.csv  cva_portfolio_inputs.csv  (+18 more)
tests/agents/: test_agent_fastapi.py  test_agent_service.py  test_multi_agent_discussion.py
tests/bob/: test_rwa_calculator.py
tests/calculator/: test_capital_modules.py  test_fastapi_microservice.py  test_golden_regression.py  test_rwa_backend.py
tests/codex/: test_fastapi_microservice.py  test_rwa_backend.py
tests/dashboard/: test_dashboard_data.py  test_dashboard_frontend.py
tests/forecast/: test_forecast_service.py
tests/projection/: test_calendar.py  test_projection_service.py
tests/rats/: test_rats_service.py
tests/steering/: test_missing_inputs.py  test_steering_poc.py  test_steering_service.py
(+3 files in other folders)
